# wishbone-utils

./: .cirrus.yml  .gitattributes  .gitignore  .travis.yml  LICENSE  Makefile  README.adoc  README.md  README.rst  debug.h  devmem2-netv2.c  etherbone-devmem2.c  etherbone.c  etherbone.h  litex-devmem2.c  read.c  vexriscv-etherbone-bridge.c
ci/: before_deploy.ps1  before_deploy.sh  cirrus_deploy.sh  install.sh  script.sh
docs/: .gitignore  Makefile  conf.py  environment.yml  index.rst  libeb-c.rst  litex-devmem2.rst  requirements.txt  wishbone-tool.rst
docs/libeb-c/: index.rst
docs/litex-devmem2/: index.rst
docs/wishbone-tool/: index.md  index.rst
libeb-c/: README.md  README.rst  etherbone.c  etherbone.h
litex-devmem2/: Makefile  README.md  README.rst
usb/: Cargo.toml
usb/doc/: Debugging with GDB  Remote Protocol.html
usb/libusb-sys/: build.rs
usb/src/: Riscv.rs  bridge.rs  config.rs  gdb.rs  main.rs  riscv.rs  usb_bridge.rs  utils.rs  wishbone.rs
wishbone-tool/: Cargo.toml  README.md  README.rst
wishbone-tool/.cargo/: config
wishbone-tool/crates/bridge/: Cargo.toml  README.md
wishbone-tool/crates/bridge/src/: ethernet.rs  lib.rs  pcie.rs  uart.rs
wishbone-tool/crates/bridge/src/bridges/: ethernet.rs  mod.rs  pcie.rs  uart.rs  usb.rs
wishbone-tool/crates/bridge/src/bridges/spi/: dummy_spi.rs  mod.rs  raspberry_spi.rs
wishbone-tool/crates/bridge/src/spi/: mod.rs  raspberry_spi.rs
wishbone-tool/crates/core/: config.rs  gdb.rs  main.rs  wishbone.rs
wishbone-tool/crates/core/riscv/: mod.rs
wishbone-tool/crates/core/server/: mod.rs  utra.rs
wishbone-tool/crates/libusb-rs/: Cargo.toml
wishbone-tool/crates/libusb-rs/src/: config_descriptor.rs  context.rs  device.rs  device_handle.rs  device_list.rs  endpoint_descriptor.rs  error.rs  fields.rs  interface_descriptor.rs  lib.rs  version.rs
wishbone-tool/crates/libusb-sys/: Cargo.toml  build.rs
wishbone-tool/crates/libusb-sys/freebsd/lib/libusb/: libusb10.c  libusb10_desc.c
wishbone-tool/crates/libusb-sys/src/: lib.rs
wishbone-tool/libusb-rs/: Cargo.toml
wishbone-tool/libusb-rs/src/: config_descriptor.rs  context.rs  device.rs  device_handle.rs  endpoint_descriptor.rs  error.rs  fields.rs  interface_descriptor.rs  lib.rs
wishbone-tool/libusb-sys/: Cargo.toml  build.rs
wishbone-tool/libusb-sys/freebsd/lib/libusb/: libusb10_io.c  libusb20_ugen20.c
wishbone-tool/libusb-sys/lib/: README.md
wishbone-tool/libusb-sys/src/: lib.rs
wishbone-tool/src/: bridge.rs  config.rs  gdb.rs  lib.rs  main.rs  riscv.rs  server.rs  uart_bridge.rs  usb_bridge.rs  wishbone.rs
wishbone-tool/src/bridge/: ethernet.rs  mod.rs  pcie.rs  spi.rs  uart.rs  usb.rs
wishbone-tool/src/bridge/spi/: dummy_spi.rs  mod.rs  raspberry_spi.rs
wishbone-tool/src/riscv/: exception.rs  mod.rs
wishbone-tool/src/server/: mod.rs
