[package]
name = "litex-usb-wishbone-bridge"
version = "0.1.0"
authors = ["Sean Cross <sean@xobs.io>"]
edition = "2018"

[dependencies]
bitflags = "1"
byteorder = "1"
clap = "2"

# git = "https://github.com/paritytech/libusb-rs.git"
libusb-sys = { path="libusb-sys" }
# git = "https://github.com/paritytech/libusb-rs.git"
libusb = { path = "libusb-rs" }