[package]
name = "wishbone-tool"
version = "0.2.8"
authors = ["Sean Cross <sean@xobs.io>"]
edition = "2018"

[dependencies]
bitflags = "1"
byteorder = "1"
clap = "2"

# git = "https://github.com/paritytech/libusb-rs.git"
libusb-sys = { path="libusb-sys" }
# git = "https://github.com/paritytech/libusb-rs.git"
libusb = { path = "libusb-rs" }

rand = "0"

log = "0"
flexi_logger = { version = "0", features = ["colors"] }

serial = "0.4"

# Enable GPIO access for SpiBone on Raspberry Pi
[target.'cfg(all(target_os = "linux", any(target_arch = "arm", target_arch = "aarch64")))'.dependencies]
rppal = "0.11"