[package]
name = "wishbone-tool"
version = "0.6.12"
authors = ["Sean Cross <sean@xobs.io>"]
edition = "2018"
repository = "https://github.com/litex-hub/wishbone-utils"
keywords = [ "litex", "wishbone" ]
license = "APACHE-2.0"

[badges]
travis-ci = { repository = "litex-hub/wishbone-utils", branch = "master" }
cirrus-ci = { repository = "litex-hub/wishbone-utils", branch = "master" }

[dependencies]
bitflags = "1"
byteorder = "1"
clap = "2"
memmap = "0.7"
terminal = "0.2.0"

# git = "https://github.com/paritytech/libusb-rs.git"
libusb-sys = { path="libusb-sys" }
# git = "https://github.com/paritytech/libusb-rs.git"
libusb = { path = "libusb-rs" }

rand = "0"

log = "0"
flexi_logger = { version = "0", features = ["colors"] }

serial = "0.4"

# Support reading csr.csv
csv = "1.1"

# Enable GPIO access for SpiBone on Raspberry Pi
[target.'cfg(all(target_os = "linux", any(target_arch = "arm", target_arch = "aarch64")))'.dependencies]
rppal = "0.11"
spin_sleep = "0.3"
