[package]
name = "wishbone-tool"
version = "0.7.7"
authors = ["Sean Cross <sean@xobs.io>"]
edition = "2018"
repository = "https://github.com/litex-hub/wishbone-utils"
keywords = [ "litex", "wishbone" ]
description = "A library and command line program to control a Wishbone bus of an embedded device"
license = "Apache-2.0"
readme = "README.md"

[badges]
travis-ci = { repository = "litex-hub/wishbone-utils", branch = "master" }
cirrus-ci = { repository = "litex-hub/wishbone-utils", branch = "master" }

[[bin]]
path = "crates/core/main.rs"
name = "wishbone-tool"

[workspace]
members = [
    "crates/libusb-sys",
    "crates/libusb-rs",
    "crates/bridge",
]

[dependencies]
clap = "2"
bitflags = "1"
byteorder = "1"
terminal = "0.2.0"
rand = "0"
log = "0"
flexi_logger = { version = "0", features = ["colors"] }
wishbone-bridge = { path = "crates/bridge", version = "1" }
# Support reading csr.csv
csv = "1.1"
indicatif = "0.15.0"
