[package]
name = "libusb"
version = "0.3.1"
authors = ["David Cuddeback <david.cuddeback@gmail.com>"]
description = "Rust library for accessing USB devices."
license = "MIT"
homepage = "https://github.com/dcuddeback/libusb-rs"
repository = "https://github.com/dcuddeback/libusb-rs.git"
documentation = "http://dcuddeback.github.io/libusb-rs/libusb/"
readme = "README.md"
keywords = ["usb", "libusb", "hardware", "bindings"]

[dependencies]
bit-set = "0.4.0"
# libusb-sys = "0.3.0"{ git = "https://github.com/paritytech/libusb-sys" }
libusb-sys = { version = "0.2.5", path = "../libusb-sys" }
libc = "0.2"

[dev-dependencies]
regex = "0.1.26"
