[package]
name = "wishbone-bridge"
version = "1.1.0"
authors = ["Sean Cross <sean@xobs.io>"]
edition = "2018"
documentation = "https://docs.rs/wishbone-bridge"
repository = "https://github.com/litex-hub/wishbone-utils"
keywords = [ "litex", "wishbone" ]
description = "A library to control Wishbone devices"
license = "Apache-2.0"
readme = "README.md"

[badges]
travis-ci = { repository = "litex-hub/wishbone-utils", branch = "master" }
cirrus-ci = { repository = "litex-hub/wishbone-utils", branch = "master" }

[features]
# The default set of optional packages. Most people will want to use these
# packages, but they are strictly optional. Note that `session` is not a package
# but rather another feature listed in this manifest.
default = ["spi", "pcie", "ethernet", "usb", "uart"]
spi = []
pcie = ["memmap"]
ethernet = ["byteorder"]
usb = ["libusb-sys-wishbone-tool", "libusb-wishbone-tool"]
uart = ["serialport"]

[dependencies]
log = "0"

# PCIe support
memmap = { version = "0.7", optional = true }

byteorder = { version = "1", optional = true }

libusb-sys-wishbone-tool = { path="../libusb-sys", version = "0.2.6", optional = true }
libusb-wishbone-tool = { path = "../libusb-rs", version = "0.3.1", optional = true }

serialport = { version = "3.3", default-features = false, optional = true }

# Enable GPIO access for SpiBone on Raspberry Pi
[target.'cfg(all(target_os = "linux", any(target_arch = "arm", target_arch = "aarch64")))'.dependencies]
rppal = "0.11"
spin_sleep = "0.3"
